5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1674_1107.log
== TEST (2019-04-29 20:29:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia de hoje: "))
b = int(input("numero de dias apos hoje: "))
#c = int(input("numero: "))
x = "Hoje eh"
y = " e o dia futuro eh "
c = (a+b)%7
if(a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
-- ERROR:
File "XXXX", line 17
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:29:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia de hoje: "))
b = int(input("numero de dias apos hoje: "))
#c = int(input("numero: "))
x = "Hoje eh"
y = " e o dia futuro eh "
c = (a+b)%7
if(a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
-- EXECUTION TIME:
0.14992
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 17
    
                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:31:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia de hoje: "))
b = int(input("numero de dias apos hoje: "))
#c = int(input("numero: "))
x = "Hoje eh"
y = " e o dia futuro eh "
c = (a+b)%7
if(a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
-- EXECUTION TIME:
0.139444
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 17
    
                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
